--- a/darknet_ros/darknet_ros/CMakeLists.txt
+++ b/darknet_ros/darknet_ros/CMakeLists.txt
@@ -45,9 +45,14 @@ if ( X11_FOUND )
   message ( STATUS " X11_LIBRARIES: " ${X11_LIBRARIES} )
 endif ( X11_FOUND )
 
+
 # Find rquired packeges
 find_package(Boost REQUIRED COMPONENTS thread)
 find_package(OpenCV REQUIRED)
+
+#find_package(OpenCV  REQUIRED)
+message("OpenCV version: ${OpenCV_VERSION}")
+
 include_directories(${OpenCV_INCLUDE_DIRS})
 find_package(catkin REQUIRED
   COMPONENTS
